# fracgen-gui

./: .gitignore  Cargo.toml  README.md  prep.sh
docs/: index.html  sw.js
src/: app.rs  color.rs  lib.rs  main.rs  renderer.rs
