[package]
name = "fracgen-gui"
version = "0.1.0"
authors = ["Jacob Berube"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.19"
clap = "3.1.6"
colortypes = "0.5.1"
decimal = "2.1.0"
eframe = "0.17.0" # Gives us egui, epi and web+native backends
egui_nodes = "0.1.3"
epaint = "0.17.0"
gif = "0.11.3"
image = "0.24.1"
linya = "0.2.2"
num = "0.4.0"
num_cpus = "1.13.1"
png = "0.17.5"
rand = "0.8.5"
rayon = "1.5.1"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 3 # fast and small wasm
lto = "fat"
codegen-units = 1

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
